# trend_exploration

./: .gitignore  ARCHITECTURE.md  HOSTING.md  README.md  SETUP.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: analysis.py  db_browser.py  health.py  ingestion.py  instagram.py  tiktok_photo.py
backend/app/core/: config.py  limits.py
backend/app/db/: bootstrap.py  connection.py  migrator.py  repository.py
backend/app/db/migrations/: 001_initial.sql  002_analysis_tool_invocations.sql  002_tiktok_photo_posts.sql  003_analysis_node_outputs.sql  003_tiktok_photo_posts_source_batch.sql  004_instagram_posts.sql  005_extraction_keyword_approval.sql  006_post_trend_signals.sql
backend/app/graph/: WORKFLOW.md  graph.py  llm.py  schemas.py  state.py  tools.py
backend/app/graph/nodes/: formatter.py  intent_parser.py  lenses.py  memory.py  sql_dispatcher.py  synthesizer.py  trend_gen.py
backend/app/models/: schemas.py
backend/app/seed/: reference_data.py
backend/app/services/: analysis_service.py
backend/app/services/ingestion/: ingestion_service.py  instagram_client.py  keyword_suggestion_service.py  llm_enrichment.py  rednote_client.py  sales_seed.py  (+4 more)
backend/tests/: conftest.py  test_api_integration.py  test_enrichment.py  test_guardrails.py  test_ingestion_limits.py  test_instagram.py  test_keyword_suggestion_service.py  test_lenses.py  test_memory.py  test_scoring.py  test_serpapi_client.py  test_tiktok_photo.py
backend/trend_exploration_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+40 files in other folders)
