[project]
name = "trend-exploration-backend"
version = "0.1.0"
description = "FastAPI and LangGraph backend for health and beauty trend discovery."
requires-python = ">=3.11"
dependencies = [
  "apscheduler",
  "fastapi",
  "httpx",
  "langchain-openai",
  "langgraph",
  "pydantic-settings",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
